--- a/Practice/05MethodsOfDataTypes/01Number.html
+++ b/Practice/05MethodsOfDataTypes/01Number.html
@@ -14,14 +14,18 @@
 
         let a = 10;
         let b = 5.3;
-        console.log(Number.isFinite(a) );
-        console.log(Number.isInteger(a) );
-        console.log(Number.isNaN(a) );
+        // console.log(Number.isFinite(a) );
+        // console.log(Number.isInteger(a) );
+        // console.log(Number.isNaN(a) );
 
-        console.log(parseFloat(b));
-        console.log(parseInt(b));
-        console.log(a.toString());
-        console.log(typeof a.toString());
+        // console.log(parseFloat(b));
+        // console.log(parseFloat(a));
+        // console.log(parseInt(b));
+        // console.log(parseInt(a));
+        // console.log(a.toString());
+        // console.log(b.toString());
+        // console.log(typeof a.toString());
+        // console.log(typeof b.toString());
     </script>
 </body>
 </html>
