--- a/Practice/01IntroJavaScript.html
+++ b/Practice/01IntroJavaScript.html
@@ -9,24 +9,68 @@
     <h1>Introduction To JavaScript</h1>
     <p>JavaScript is Event Based Programming Language</p>
     <p>
-      With the help of JavaScript we can make our web page alive i.e we can add
+      java script me event based programming keyboard, mouse, touchpad or touch screens and external sensor ke dwara <br>
+      koi bhi kam karvane k liye use ki jati he. 
+    </p>
+    <p>
+      With the help of JavaScript we can make our web page alive i.e we can add<br>
       some functionality.
     </p>
     <p>JavaScript is Loosly Typed or Dynamically Typed Language.</p>
+    <p>Loosely Type Means?</p>
+    <p>
+      Loosely Type means aap variable ko kisi bhi type me declare kar sakte ho suppose aapne pehle variable ko<br>
+      integer declare kiya he par bad me aap usko string me bhi convert kar sakte ho. Or, aap usko kahi se <br>
+      bhi define kar sakte ho matlab jaruri nahi he ki aap usko pehle define karo badme usko use karo.<br>
+    </p>
+    <p>Weakly Type Means?</p>
+    <p>
+      ye type loosely k bilkul opposite kam karta he aapko pehle veriable define karna padta he or aa<br>
+      badme usko change nahi kar sakte he.
+    </p>
+    <p>Dynamically Type Means?</p>
+    <p>
+      ye ase prakar ki language he jisme aapko pehle variable define karne ki jarurat nahi hoti.<br>
+      aap runtime pe hi variable declare karke use use kar sakte he...
+    </p>
     <p>JavaScript is an Interpreted Language</p>
+    <p>Interpreted Means?</p>
+    <p>anuvad karna, varnan karna.</p>
     <p>
       JavaScript is used to manipulte HTML and CSS i.e we can make any chnages
       in our Web page Dynamically
     </p>
     <p>JavaScript was founded by Brenden Eich in 1995</p>
     <p>Previously JavaScript is associated with Netscape, currently Oracle</p>
+    <p>
+      Brenden Eich american computer programmer and technology executive the. <br>
+      unhone java Script ka aavishkar kiya tha or mozila project, mozila foundation, mozila corporation
+      ki sthapna ki thi.<br>
+      unhone chieh executive officer ke position pe aane se pehle mozila technical officer ke post pe seva di thi.<br>
+      par unke posting k thode samay bad hi same sex marriage k sakht virodh k pressure k karan resign kar diya tha.<br>
+      uske bad wo brave software k CEO bane.
+    </p>
 
     <h2>Features Of JavaScript</h2>
     <p>Web Development (Both Client Side and Server Side)</p>
+    <p>Client Side Web Development?</p>
+    <p>
+      Whatever we see due to web serfing on anywebsite. It is called Client Side e.g photos, videos. <br>
+      conclusion is User Interface.
+    </p>
+    <p>Server Side Web Development?</p>
+    <p>
+      Server Side Web Development me Client request bhejta he server ko or server message ka wait kar raha hota he <br>
+      then message aate hi regarding message data provide karta he.
+    </p>
     <p>Mobile Development</p>
     <p>Desktop Development</p>
     <p>Game Development</p>
     <p>BlockChain Development</p>
+    <p>What is Block-Chain Development?</p>
+    <p>
+      Block-Chain Development me aap Curly Braces me jo code likhte ho ya koi function banate ho use kaha jata he.
+    </p>
     <p>ML & AI</p>
 
     <h2>Different engines have different “codenames”. For example:</h2>
