--- a/Practice/03Varibale.html
+++ b/Practice/03Varibale.html
@@ -1,52 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Variable In JS</title>
-  </head>
-  <body>
-    <h1>Variables In JS</h1>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Variable in JS</title>
+</head>
+<body>
 
-    <script>
-      // We have two variables and one Constant
+  <h1>Variable in JS</h1>
+  
+  <script>
+    //apne pass 2 variable or 1 constant he
 
-      // 1. var
+    // 1. Var
 
-      // var a; // Declaration
-      // a = 20;  // Assignment
-      // var a = 20  // Initialization and Declaration
-      // var a = 30  // Re-Declaration is possible
-      // a = 40  // Re-Assignement is possible
-      // console.log(a);
+    // var a; Declaration | New Variable create karna.
+    // a = 20; assigning a value.
+    // var a = 25; Initialization and Declaration / iska matlab hota he computer me a name ka variable bana ke usko 25 value assign kar do.
+    // var a = 30; Re-Declaration is possible.
+    // a = 40; Re-Assignement is possible.
+    // console.log(a);
 
-      // Never use var
-      // it was used before ES6
+    // Never use var
+    // it was used before ES6
 
-      // 2. let
+    // 2. let
 
-      // It was introduced in ES6
+    // It was introduced in ES6
 
-      // let name = 'Frank';  // Initialization and Declaration
-      // // let name = 'Frank Kumar';  // Re-Declaration is not possible
-      // name = 'Frank Patel'  // Re-Assignement is possible
-      // console.log(name);
+    // let name = 'sohil'; Initialization and Declaration.
+    // let name = 'priti';  Re-Declaration Possible nathi.
+    // name = 'ayan'; Re-assignment possible che.
+    // console.log(name);
 
-      // 3. const
+    // 3. const
 
-      const fav_Actress = "Vidya Balan"; // Initialization and Declaration
-    //   const fav_Actress = "Alia Bhatt"; // Re-Declaration is not possible
-      fav_Actress = "Deepika"; // Re-Assignement is possible
-      console.log(fav_Actress);
+    // const fav_actress = 'Aishwariya Rai'; Initialization and Declaration.
+    // const fav_actress = 'priyanka Chopra'; Re-Declaration Possible nathi.
+    // fav_actress = 'Rashmika Mandana'; Re-Assignment pan Possible nathi.
+    // console.log(fav_actress);
 
-
-
-
-
-      // Rules 
-
+    // Rules 
 
     //   Always Start with _, $, alpha
-    </script>
-  </body>
+
+
+  </script>
+
+  </script>
+
+</body>
 </html>
