--- a/Practice/05MethodsOfDataTypes/03String.html
+++ b/Practice/05MethodsOfDataTypes/03String.html
@@ -9,22 +9,32 @@
     <h1>String In JS</h1>
 
     <script>
-        // String In JS
+
+    // String In JS
+
+    let a = 'Namaste Bhaisab';
+    let b = "       Hello, Goood Morning....      "
+
+    console.log(a);
+    console.log(a.length);
+    console.log(a.concat(' Hello'));
+    console.log(a.search('s'));
+    console.log(a.toLocaleUpperCase());
+    console.log(a.toLocaleLowerCase());
+    console.log(b);
+    console.log(b.trim());
+    console.log(b.trimStart());
+    console.log(b.trimEnd());
+    console.log(b.trimLeft());
+    console.log(a.replace('Bhaisab', 'India'));
+    
 
 
-        let a = "Namaste Bharat";
-        let b = "            Namaste Bharat       ";
-        let greet = "Namaste India"
+    </script>
 
-        console.log(a);
-        console.log(a.length);
-        console.log(a.toLowerCase());
-        console.log(a.toUpperCase());
-        console.log(b.trim());
-        console.log(a.concat(' Mata'));
-        console.log(greet);
-        console.log(greet.replace('India', 'Bharat'));
-
-      </script>
 </body>
 </html>
+
+<!-- Doubts -->
+
+<!-- .Replace() kya kam karta he -->
