--- a/Practice/06GetDataHTML/03Event.html
+++ b/Practice/06GetDataHTML/03Event.html
@@ -6,13 +6,18 @@
     <title>Event</title>
 </head>
 <body>
-    <button onclick="greet()">Click Me</button>
 
+    <h1>Event</h1>
+
+    <button onclick="greetings()">Click Me</button>
 
     <script>
-        function greet() {
-            console.log('Namaste Bharat');
+
+        function greetings() {
+            console.log("Hello!!");
         }
+
     </script>
+
 </body>
 </html>
