--- a/Practice/04DataTypesJs.html
+++ b/Practice/04DataTypesJs.html
@@ -1,93 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Data Types In JS</title>
-  </head>
-  <body>
-    <h1>Data Types In JS</h1>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Data Types In JS</title>
+</head>
+<body>
+  <h1>Data Types In JS</h1>
 
-    <script>
-      // Data Types
+  <script>
 
-      // We have two types of Data Types In JS
+    // Data Types
 
-      // 1. Premitive Data Type
+    // WE HAVE 2 TYPES OF DATA TYPES IN JS
 
-      // Number
+    // 1. Primitive Data Type
 
-      //   let a = 10;
-      //   console.log(a);
-      //   console.log(typeof a);
+    // yad rakhva mate N N B B S S U
 
-      // Null
+    // Number
 
-      //   let b = null;
-      //   console.log(b);
-      //   console.log(typeof b);
+    // let a = 10;
+    // console.log(a);
+    // console.log(typeof a);
 
-      // String
+    // Null
 
-      // let c = 'frank'
-      // let c = "Frank"
-      //   let c = `"Hey I'm Frank" 'and' "I'm a boii"`;
-      //   console.log(c);
-      //   console.log(typeof c);
+    // let b = null;
+    // console.log(b);
+    // console.log(typeof b); Null is an Object
 
-      // Symbol
+    // String
 
-      //   let d = Symbol("Hello");
-      //   console.log(d);
-      //   console.log(typeof d);
+    // let c = 'Sohil';
+    // console.log(c);
+    // console.log(typeof c);
 
-      // BigInt
+    // Symbol
 
-      //   let e = 56151565654n;
-      //   console.log(e);
-      //   console.log(typeof e);
+    // let d = Symbol("Victory");
+    // console.log(d);
+    // console.log(typeof d);
 
-      // Boolean
+    // Big Int
 
-      //   let f = true;
-      //   console.log(f);
-      //   console.log(typeof f);
+    // let e = 654987321n;
+    // console.log(e);
+    // console.log(typeof e);
 
-      // Undefined
+    // Boolean
 
-      //   let g;
-      //   console.log(g);
-      //   console.log(typeof g);
-      //   console.log(h); // Not Defined
+    // let f = true;
+    // console.log(f);
+    // console.log(typeof f);
 
-      // 2. Non-Premitive Data Type
+    // UnDefined
 
-      // Array
+    // let g;
+    // console.log(g);
+    // console.log(typeof g);
 
-      let arr = [10, 20, 30, true, "hello", {name: 'frank'}];
+    // console.log(h); Undefined or Not Defined me difference he Undefined means variable 
+                    // define kar diya he par usko value nahi di he.
+                    // or not defined means as a veriable aapne usko define hi nahi kiya he.
 
-      console.log(arr);
-      console.log(arr.length);
-      console.log(arr[2]);
-      console.log(arr[5].name);
-      console.log(typeof arr);
+                    
+  </script>
 
-      // Object
-
-
-      let details = {
-        // key: 'value',
-        name: 'xyz',
-        age: 25,
-        contact: 2514354514515,
-        email: 'xyz@gmail.com',
-        isLoggedIn: true,
-      }
-
-      console.log(details);
-      console.log(details.name);
-      console.log(details.email);
-      console.log(typeof details);
-    </script>
-  </body>
+</body>
 </html>
