--- a/Practice/05MethodsOfDataTypes/01Number.html
+++ b/Practice/05MethodsOfDataTypes/01Number.html
@@ -9,23 +9,27 @@
     <h1>Number In JS</h1>
 
     <script>
+
         // Number In JS
 
-
         let a = 10;
-        let b = 5.3;
-        // console.log(Number.isFinite(a) );
-        // console.log(Number.isInteger(a) );
-        // console.log(Number.isNaN(a) );
+        let b = 15.8;
 
-        // console.log(parseFloat(b));
-        // console.log(parseFloat(a));
-        // console.log(parseInt(b));
-        // console.log(parseInt(a));
-        // console.log(a.toString());
-        // console.log(b.toString());
-        // console.log(typeof a.toString());
-        // console.log(typeof b.toString());
+        // console.log(Number.isFinite(b));
+        // console.log(Number.isInteger(b));
+        // console.log(Number.isNaN(a));
+        // console.log(Number.isSafeInteger(b));
+
+        console.log(parseInt(b));
+        console.log(parseFloat(b));
+        console.log(a.toString());
+        console.log(typeof a);
+
     </script>
+
 </body>
 </html>
+
+<!-- Doubts -->
+
+<!-- console.log(a.toString()); string me covert karne k bad bhi type of number kyu dikhata he? -->
