--- a/Practice/05MethodsOfDataTypes/02Math.html
+++ b/Practice/05MethodsOfDataTypes/02Math.html
@@ -9,20 +9,24 @@
     <h1>Math In JS</h1>
 
     <script>
-        // Math In JS
 
+    // Math In JS
 
-        let a = 10;
-        let b = 5.3;
-        console.log(Math.ceil(b));  // Returns the smallest integer greater than or equal to b.
-        console.log(Math.floor(b));  // Returns the largest integer less than or equal to b.
-        console.log(Math.pow(4,2));
-        console.log(Math.pow(8,2));
-        console.log(Math.round(b));
-        console.log(Math.max(10,20,30,5));
-        console.log(Math.min(10,20,30,5));
-        console.log(Math.random());
-        console.log(Math.sqrt(64));
+    let a = 12;
+    let b = 12.5;
+
+    // console.log(Math.ceil(b)); point wali value ko jo bhi number hoga usse 1 number badha kar k batayega.
+    // console.log(Math.floor(b)); point wali value ko jo bhi number hoga usse 1 number chota kar k batayega.
+    // console.log(Math.pow(a,b)); power dene k liye jese ki 8*8
+    // console.log(Math.round(b));  value ko round off karne k liye
+    // console.log(Math.sqrt(a)); koi bhi value ka square root nikalne k liye
+    // console.log(Math.random()); har refresh page par naya number access karne k liye koi bar 
+                                // same number nahi aayega har bar alag hi number hoga
+    // console.log(Math.max(10,20,3,5,8,15)); array value me se maximum number dhudhne k liye
+    // console.log(Math.min(10,20,3,5,8,15)); array value me se minimum number dhudhne k liye
+    
+
     </script>
+
 </body>
 </html>
