--- a/Practice/11Loops/02ForLoops.html
+++ b/Practice/11Loops/02ForLoops.html
@@ -28,11 +28,34 @@
 
         // 1. For Each
 
-        let arr = [10,20,30,40,50,60];
+        // let arr = [10,20,30,40,50,60];
 
-        arr.forEach(element => {
-           console.log(element); 
-        });
+        // arr.forEach(element => {
+        //    console.log(element); 
+        // });
+
+        // 2. for in
+
+        // let obj = {
+        //     name : 'sohil',
+        //     email : 'shlkoitiya@gmail.com',
+        //     contact_no : '9725392493'
+        // }
+
+        // for (const key in obj) {
+        //     // console.log(key);
+        //     console.log(obj);
+        // }
+
+        // 3. for of
+
+        let arr = [10,20,30,40,50,60,70];
+
+        for (const iterator of arr) {
+            // console.log(arr);
+            console.log(iterator);
+        }
+
     </script>
 
 </body>
