--- a/Task/Chai or Code/Date&TimeInJS.html
+++ b/Task/Chai or Code/Date&TimeInJS.html
@@ -36,7 +36,26 @@
 
         // console.log(myTimeStamp);
         // console.log(myCreatedDate.getTime());
-        console.log(Math.floor(Date.now()/1000));
+        // console.log(Math.floor(Date.now()/1000));
+
+        let newDate = new Date()
+        // console.log(newDate);
+        // console.log(newDate.getDate());
+        // console.log(newDate.getDay());
+        // console.log(newDate.getFullYear());
+        // console.log(newDate.getHours());
+        // console.log(newDate.getMilliseconds());
+        // console.log(newDate.getMinutes());
+        // console.log(newDate.getMonth());
+        // console.log(newDate.getSeconds());
+        // console.log(newDate.getTime());
+        // console.log(newDate.getTimezoneOffset());
+        // console.log(newDate.getUTCDate());
+        // console.log(newDate.getUTCDay());
+
+        console.log(newDate.toLocaleString('default', {
+            weekday: "long",
+        }));
     </script>
 </body>
 </html>
